--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ main {
 
 /* Player Card Styling */
 .player-card {
-  background-color: #fff;
+  background-color: #2e004f;
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
@@ -90,18 +90,5 @@ main {
 
 .player-card .stats p span {
   font-weight: bold;
-  color: #007bff;
-}
-
-/* Footer Styling */
-footer {
-  text-align: center;
-  background-color: #222;
-  color: #fff;
-  padding: 10px 0;
-  margin-top: 20px;
-}
-
-footer p {
-  font-size: 0.9rem;
+  color: #2e004f;
 }
